--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "testsonChrome": "npx cypressrun --browser chrome --headed"
+
   },
-   "author": "",
-   "license": "ISC",
-   "dependencies": 
-   {
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
     "cypress": "^13.3.0"
   }
 }
