comit the changes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 default:
-    image: cypress/browsers:node16.16.0-chrome106-ff99-edge
+    cypress/browsers:node-18.16.0-chrome-114.0.5735.133-1-ff-114.0.2-edge-114.0.1823.51-1
 
 stages:
  - test
@@ -11,5 +11,3 @@ test:
   - npx cypress run testsonChrome
 
 
-dependencies:
- - test
